Introduced text to speech for Android. #rb: Chris.Babcock #preflight: 611172d372fe2c00010af4d5
[CL 17108761 by Leon Huang in ue5-main branch]

--- a/Engine/Plugins/Experimental/TextToSpeech/TextToSpeech.uplugin
+++ b/Engine/Plugins/Experimental/TextToSpeech/TextToSpeech.uplugin
@@ -23,7 +23,8 @@
 			"WhitelistPlatforms":
 			[
 				"Win64",
-				"Mac"
+				"Mac",
+				"Android",
 			],
 			"BlacklistTargets" :[
 				"Server"
