Disabled VT pool notifications by default. Enable with r.VT.Residency.Notify Default VT residency mip map on for default pools. This is overridable per project and per pool. #rb none #preflight 61128bb272fe2c00013a846c
#ROBOMERGE-SOURCE: CL 17116695
#ROBOMERGE-BOT: (v855-17104924)

[CL 17116736 by jeremy moore in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2804,11 +2804,15 @@ bAllowDelayedMessaging=false
 DefaultChaosSolverActorClass=/Script/ChaosSolverEngine.ChaosSolverActor
 
 [/Script/Engine.VirtualTexturePoolConfig]
-; Configure VT physical memory pools. Usefull commands to set these
+; Configure VT physical memory pools. Useful commands to set these:
 ; "stat virtualtexturing" show dynamic use of the VT system including the cache loads
 ; "r.VT.ListPhysicalPool" list in-depth details on the allocated physical pools
-; The upper allocation limit for a pool is caluclated by matching a size and format from the list below or falling back to the default
-DefaultSizeInMegabyte=64
+; "r.VT.DumpPoolUsage" list in-depth details on asset usage of physical pools
+; The default pool size and behavior is set here. It can be overridden in project config files.
++Pools=(SizeInMegabyte=64, bAllowSizeScale=False, bEnableResidencyMipMapBias=True)
+; Specific pools can be configured per tile size or format in project config files. Examples commented below:
+;+Pools=(Formats=(PF_DXT1), SizeInMegabyte=36, bAllowSizeScale=True, ScalabilityGroup=1, bEnableResidencyMipMapBias=False)
+;+Pools=(Formats=(PF_DXT5, PF_DXT5), SizeInMegabyte=100)
 
 [PlatformPaths]
 UnrealBuildTool=Engine/Binaries/DotNET/UnrealBuildTool/UnrealBuildTool.exe
