Lumen Volumetric Final Gather * 9 short jittered rays are traced from the voxels of a camera-aligned volume texture, and on miss the rays interpolate from a world space Radiance Cache just for Translucency GI.  The Radiance Cache is populated only where the Lumen Translucency Lighting Volume will sample, and generates mips to avoid introducing noise when sampled. * A spatial filter runs on the volume texture after tracing to smooth out noise * Quality of Lumen GI on Translucency and Volumetric Fog is significantly higher than before, while cost at defaults went from .28ms to .51ms on 2080Ti * HZB occlusion is used to avoid tracing for any voxels whose trilinear footprint is fully occluded by opaque * Important cvars: r.Lumen.TranslucencyVolume.TraceFromVolume, r.Lumen.TranslucencyVolume.TracingOctahedronResolution, r.Lumen.TranslucencyVolume.RadianceCache, r.Lumen.TranslucencyVolume.RadianceCache.ProbeResolution * Hardware Ray Tracing support for Lumen Translucency Volume * Implemented a single dispatch mip generation for Radiance Cache #preflight 6111f73f0ccb840001a1f260
#ROBOMERGE-SOURCE: CL 17118715
#ROBOMERGE-BOT: (v855-17104924)

[CL 17118791 by daniel wright in ue5-main branch]

--- a/Engine/Config/BaseScalability.ini
+++ b/Engine/Config/BaseScalability.ini
@@ -500,6 +500,8 @@ r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=16
 r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=0
 r.Lumen.ScreenProbeGather.DownsampleFactor=32
 r.Lumen.Reflections.DownsampleFactor=2
+r.Lumen.TranslucencyVolume.TraceFromVolume=0
+r.Lumen.TranslucencyVolume.RadianceCache.ProbeResolution=8
 
 [EffectsQuality@3]
 r.TranslucencyLightingVolumeDim=64
@@ -539,6 +541,9 @@ r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=32
 r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=1
 r.Lumen.ScreenProbeGather.DownsampleFactor=16
 r.Lumen.Reflections.DownsampleFactor=1
+r.Lumen.TranslucencyVolume.TraceFromVolume=1
+r.Lumen.TranslucencyVolume.TracingOctahedronResolution=3
+r.Lumen.TranslucencyVolume.RadianceCache.ProbeResolution=8
 
 [EffectsQuality@Cine]
 r.TranslucencyLightingVolumeDim=64
@@ -578,6 +583,9 @@ r.Lumen.ScreenProbeGather.RadianceCache.ProbeResolution=32
 r.Lumen.ScreenProbeGather.ScreenSpaceBentNormal=1
 r.Lumen.ScreenProbeGather.DownsampleFactor=16
 r.Lumen.Reflections.DownsampleFactor=1
+r.Lumen.TranslucencyVolume.TraceFromVolume=1
+r.Lumen.TranslucencyVolume.TracingOctahedronResolution=4
+r.Lumen.TranslucencyVolume.RadianceCache.ProbeResolution=16
 
 ;-----------------------------------------------------------------------------------------------------------------
 
