EditorDomain: blacklist some files currently causing a problem when resaved and loaded. #rb None, Trivial #rnx #fyi Zousar.Shaker
[CL 17120956 by Matt Peters in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -373,8 +373,12 @@ bUseFullGCAssetClassNames=true
 EditorDomainEnabled=false
 SaveUnversioned=false
 ; +ClassBlacklist=/Long/PackageName.ClassName
+ClassBlacklist=/Script/ControlRig.ControlRigBlueprintGeneratedClass
 ; +PackageBlacklist=/Long/PackageName OR ../../../Standard/Filename/NoExtension OR D:\Absolute\Filename\NoExtension
 
+; Know bad files that are problematic if all of them come from EditorDomain. Blacklisting any one of these is sufficient to prevent the bug
++PackageBlacklist=/Niagara/Functions/RandomRangeFloat
++PackageBlacklist=/Niagara/Modules/Update/Color/ScaleColor
 
 [CookPlatformDataCacheSettings]
 MaterialInstance=100
