visual logger rewind debugger integration #rb Jurre.DeBaare #preflight 6112a4ddafd67e0001ebb06c
[CL 17124037 by Keith Yerex in ue5-main branch]

--- a/Engine/Plugins/Animation/GameplayInsights/GameplayInsights.uplugin
+++ b/Engine/Plugins/Animation/GameplayInsights/GameplayInsights.uplugin
@@ -33,6 +33,11 @@
 			"Name": "RewindDebugger",
 			"Type": "Editor",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "RewindDebuggerVLog",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
 		}
 
 	]
