Add config options to OnlineIdentityNull that let it emulate different types of login setups Change default behavior to allow a null login with empty credentials, as this matches 99% of the platforms #rb rob.cannaday
[CL 17124087 by ben zeigler in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1853,6 +1853,12 @@ bEnabled=false
 
 [OnlineSubsystemNull]
 bEnabled=true
+bAutoLoginAtStartup=true
+bRequireLoginCredentials=false
+bAddUserNumToNullId=false
+bForceStableNullId=false
+bForceOfflineMode=false
+
 Achievement_0_Id=null-ach-0
 Achievement_0_bIsHidden=false
 Achievement_0_Title="Achievement 0"
