Default Linux to Visual Studio Code over Null Source Code
#jira none
#rb Michael.Sartain
#fyi Will.Damon

[CL 17140040 by Brandon Schaefer in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -284,6 +284,7 @@ SearchForAnswersURL="http://udn.unrealengine.com/search.html"
 SupportWebsiteURL="http://udn.unrealengine.com/index.html"
 SourceCodeIDEURL_Windows="https://aka.ms/vs/16/release/vs_Community.exe"
 SourceCodeIDEURL_Mac="https://developer.apple.com/xcode"
+SourceCodeIDEURL_Linux="https://code.visualstudio.com/docs/setup/linux"
 SourceCodeIDEURL_Other="http://en.wikipedia.org/wiki/Integrated_development_environment"
 EpicGamesURL="http://UnrealEngine.com"
 FacebookURL="http://www.facebook.com/UnrealEngine"
