#jira UERES-7 NeuralNetworkInference plugin: - Which OS will compile is longer set on the UPlugin, but instead on the NNI.Build.Cs file, by adding WITH_ORT flag for desired platforms. Simpler for users.
Preflight https://horde.devtools.epicgames.com/job/6114536e9c7bb10001fbd906
#rb Francisco.Vicente
#rnx

[CL 17144329 by Gines Hidalgo in ue5-main branch]

--- a/Engine/Plugins/Experimental/NeuralNetworkInference/NeuralNetworkInference.uplugin
+++ b/Engine/Plugins/Experimental/NeuralNetworkInference/NeuralNetworkInference.uplugin
@@ -18,10 +18,7 @@
 		{
 			"Name": "NeuralNetworkInference",
 			"Type": "RuntimeAndProgram",
-			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
-				"Win64"
-			]
+			"LoadingPhase": "Default"
 		},
 		{
 			"Name": "NeuralNetworkInferenceBackEnd",
