--- a/Engine/Source/Programs/UnrealControls/UnrealControls.csproj
+++ b/Engine/Source/Programs/UnrealControls/UnrealControls.csproj
@@ -69,7 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\DotNETCommon\MetaData.cs">
+    <Compile Include="..\Shared\MetaData.cs">
       <Link>Properties\MetaData.cs</Link>
     </Compile>
     <Compile Include="ColoredDocumentLineSegment.cs" />
