--- a/Engine/Source/Programs/UnrealSwarm/Agent/Agent_Mono.csproj
+++ b/Engine/Source/Programs/UnrealSwarm/Agent/Agent_Mono.csproj
@@ -87,7 +87,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\DotNETCommon\MetaData.cs">
+    <Compile Include="..\..\Shared\MetaData.cs">
       <Link>Properties\MetaData.cs</Link>
     </Compile>
     <Compile Include="Channels.cs" />
