#jira UERES-7 NeuralNetworkInference (NNI) plugin: - Added Doxygen-style doc to main NNI classes
#rb Francisco.Vicente
#rnx

[CL 17159554 by Gines Hidalgo in ue5-main branch]

--- a/Engine/Plugins/Experimental/NeuralNetworkInference/NeuralNetworkInference.uplugin
+++ b/Engine/Plugins/Experimental/NeuralNetworkInference/NeuralNetworkInference.uplugin
@@ -3,7 +3,7 @@
 	"Version": 0.1,
 	"VersionName": "0.1.0-alpha",
 	"FriendlyName": "Neural Network Inference (NNI)",
-	"Description": "Neural Network Inference (NNI) is an experimetal plugin that allows deploying and running deep learning neural network models within Unreal Engine.",
+	"Description": "Cross-platform framework for running deep learning and neural network inference in Unreal Engine, supporting both CPU and GPU acceleration.",
 	"Category": "Experimental",
 	"CreatedBy": "Epic Games, Inc.",
 	"CreatedByURL": "http://epicgames.com",
