CookRequestCluster: Fix clang compile error, and set ExploreSoftReferencesOnStart=false for now.
[CL 17172275 by Matt Peters in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -327,6 +327,7 @@ MaxUsedMemory=16384
 [CookSettings]
 BulkDataRegistryEnabled=false
 TargetDomainEnabled=false
+ExploreSoftReferencesOnStart=false
 PackagesPerGC=0
 IdleTimeToGC=20
 MemoryMaxUsedPhysical=16384
