Add TargetDomain.IterativeClassBlacklist and IterativeClassWhitelist. #rb Zousar.Shaker #rnx
[CL 17185319 by Matt Peters in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -326,7 +326,6 @@ MaxUsedMemory=16384
 
 [CookSettings]
 BulkDataRegistryEnabled=false
-TargetDomainEnabled=false
 ExploreSoftReferencesOnStart=false
 PackagesPerGC=0
 IdleTimeToGC=20
@@ -381,6 +380,18 @@ ClassBlacklist=/Script/ControlRig.ControlRigBlueprintGeneratedClass
 ; Know bad files that are problematic if all of them come from EditorDomain. Blacklisting any one of these is sufficient to prevent the bug
 +PackageBlacklist=/Niagara/Functions/RandomRangeFloat
 +PackageBlacklist=/Niagara/Modules/Update/Color/ScaleColor
+
+[TargetDomain]
+TargetDomainEnabled=false
+; IterativeClassWhitelist/IterativeClassBlacklist:
+;    Used in HybridIterative only.
+;    List of classes that may use iterative cooks. Whitelist superclasses are also whitelisted.
+;    Blacklist subclasses are also blacklisted. Blacklist overrides the whitelist.
+; +IterativeClassWhitelist=/Long/PackageName.ClassName
+; +IterativeClassBlacklist=/Long/PackageName.ClassName
+IterativeClassWhitelist=/Script/Engine.Texture2D
++IterativeClassWhitelist=/Script/CoreUObject.MetaData
++IterativeClassWhitelist=/Script/Engine.AssetImportData
 
 [CookPlatformDataCacheSettings]
 MaterialInstance=100
