Shader symbol terminology changes - Splitting symbol generation and shader "debug info" generation into two different cvars. This should now allow us to generate symbols post-packaging without generating different shader variants. This should also enable us to always generate symbols and still have the final deduplicated shader sizes. - r.Shaders.Symbols is now the primary way to enable shader symbols for debugging. - r.Shaders.GenerateSymbols can be enabled to always generate symbols without writing them to disk. - r.Shaders.WriteSymbols can be used to force write symbols if they were previously generated. - r.Shaders.ExtraData can be used to generate shader names for engine runtime systems to use. - NotifyShaderCooked replaced with NotifyShaderCompiled, prep for upcoming non-cook symbol writing. - PC DXC shader compiles should only generate debug info when requested, not all the time. - PC FXC shader compiles should generate debug info when requested, not just when r.Shaders.Optimize is 0.
#jira none
#rb arciel.rekman, lukas.hermanns
#preflight 611ad9035e737200015992db

[CL 17186155 by christopher waters in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1541,13 +1541,34 @@ bUseVirtualCores = False
 bForceUseSCWMemoryPressureLimits = False
 
 [ShaderCompiler]
-; Shader compiler debug info cvars that can be overridden per platform.
-; Build shader debug info and export any external debug info.
-r.Shaders.KeepDebugInfo=0
-; Build, but do not export external debug info.
-r.Shaders.PrepareExportedDebugInfo=0
-; Export external debug info if it is built.
-r.Shaders.ExportDebugInfo=0
+; Shader symbol cvars that can be overridden per platform.
+; Generate and write shader symbols
+r.Shaders.Symbols=0
+; Generate shader symbols but don't write to disk
+r.Shaders.GenerateSymbols=0
+; Write generated shader symbols to disk
+r.Shaders.WriteSymbols=0
+; Write generated symbols to a single zip file
+r.Shaders.WriteSymbols.Zip=0
+; Override the path that symbols are written to.
+r.Shaders.SymbolPathOverride=""
+; Base shader symbols off of source and not generated shaders
+r.Shaders.AllowUniqueSymbols=0
+
+[ShaderCompiler_BuildMachine]
+; Build machine specific shader symbol cvars that can be overridden per platform.
+; Generate and write shader symbols
+r.Shaders.Symbols=0
+; Generate shader symbols but don't write to disk
+r.Shaders.GenerateSymbols=0
+; Write generated shader symbols to disk
+r.Shaders.WriteSymbols=0
+; Write generated symbols to a single zip file
+r.Shaders.WriteSymbols.Zip=0
+; Override the path that symbols are written to.
+r.Shaders.SymbolPathOverride=""
+; Base shader symbols off of source and not generated shaders
+r.Shaders.AllowUniqueSymbols=0
 
 [LogFiles]
 PurgeLogsDays=5
@@ -2571,10 +2592,11 @@ DefaultASTCQualityBySize=3
 +VersionedIntRValues=r.BasePassOutputsVelocity
 +VersionedIntRValues=r.SelectiveBasePassOutputs
 +VersionedIntRValues=r.DBuffer
-+VersionedIntRValues=r.Shaders.KeepDebugInfo
-+VersionedIntRValues=r.Shaders.ExportDebugInfo
-+VersionedIntRValues=r.Shaders.AllowUniqueDebugInfo
-+VersionedIntRValues=r.Shaders.PrepareExportedDebugInfo
++VersionedIntRValues=r.Shaders.Symbols
++VersionedIntRValues=r.Shaders.GenerateSymbols
++VersionedIntRValues=r.Shaders.WriteSymbols
++VersionedIntRValues=r.Shaders.AllowUniqueSymbols
++VersionedIntRValues=r.Shaders.ExtraData
 +VersionedIntRValues=r.Shaders.Optimize
 +VersionedIntRValues=r.CompileShadersForDevelopment
 +VersionedIntRValues=r.MobileHDR
