--- a/Engine/Config/ConsoleVariables.ini
+++ b/Engine/Config/ConsoleVariables.ini
@@ -71,7 +71,7 @@ r.DumpShaderDebugInfo=2
 ; Uncomment when running with a graphical debugger (but not when profiling)
 ;r.Shaders.Optimize=0
 ; When this is enabled, shaders will have extra debugging info. This could change patch sizes, uniqueness, etc and will recompile the shaders
-;r.Shaders.KeepDebugInfo=1
+;r.Shaders.Symbols=1
 ; Uncomment to skip shader compression. Can save a significant time when using debug shaders.
 ;r.Shaders.SkipCompression=1
 ; Uncomment and change to set a custom folder to write shader symbols to when they are generated.
