clean up fast texture encode option with explicit -fasttextureencode option stop using "with editor" to mean "fast texture encode"
#rb devin.doucette,dan.thompson

[CL 17205139 by charles bloom in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2863,11 +2863,11 @@ TextureFormatPrefix="OODLE_"
 ; should BC2 and 3 (DXT3 and 5) be changed to BC7
 bForceAllBC23ToBC7=False
 ; bForceRDOOff uses the Oodle non-RDO encoders for BC1-7, high speed and good quality but no size reduction
-bForceRDOOff_Editor=True
-bForceRDOOff_NoEditor=True
-; CompressEffortLevel_ is the amount of time to spend for higher quality encodings; Default, Low, Normal, High.
-CompressEffortLevel_Editor=Normal
-CompressEffortLevel_NoEditor=Normal
+bForceRDOOff_FastEncode=True
+bForceRDOOff_NoFastEncode=True
+; EncodeEffortLevel_ is the amount of time to spend for higher quality encodings; Default, Low, Normal, High.
+EncodeEffortLevel_FastEncode=Normal
+EncodeEffortLevel_NoFastEncode=Normal
 ; bDebugColor shows the BC1-7 format used
 bDebugColor=False
 ; bDebugDump writes out all images cooked
@@ -2882,3 +2882,4 @@ DefaultRDOLambda=30
 ; Specifies how many buffers Oodle should keep around for 
 ; reuse as opposed to heap allocating every decode.
 PreallocatedBufferCount=2
+
