--- a/Engine/Plugins/Experimental/GeometryCache/GeometryCache.uplugin
+++ b/Engine/Plugins/Experimental/GeometryCache/GeometryCache.uplugin
@@ -14,6 +14,12 @@
 	"CanContainContent" : false,
 	"IsBetaVersion" : true,
 	"Installed" : false,
+	"Plugins": [
+		{
+			"Name": "Niagara",
+			"Enabled": true
+		}
+	],
 	"Modules" :
 	[
 		{
