Make sure the FBIK plugin gets loaded before any game modules. Otherwise if it gets loaded as a part of a project, it won't be found.
#jira UE-109066
#fyi kiaran.ritchie
#rnx

[CL 17207779 by halfdan ingvarsson in ue5-main branch]

--- a/Engine/Plugins/Experimental/FullBodyIK/FullBodyIK.uplugin
+++ b/Engine/Plugins/Experimental/FullBodyIK/FullBodyIK.uplugin
@@ -24,12 +24,12 @@
 		{
 			"Name": "FullBodyIK",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
 		},
 		{
 			"Name": "PBIK",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
 		}
 	]
 }
