PoseSearch Debugger: Debug Visualization & Multiple Tabs
- Debug Visualization integration inside the debugger, currently supports drawing the query vector in blue, the active pose in green, and a database selection in red
- Multiple debugger tabs are now supported inside the Rewind Debugger, using the "Keep View Open" option in the context menu of the Pose Search tab.

#jira UETOOL-4045
#rnx
#rb braeden.shosa
#preflight 611aba583a81b00001d611a5

[CL 17225646 by jon bourim in ue5-main branch]

--- a/Engine/Plugins/Experimental/Animation/PoseSearch/PoseSearch.uplugin
+++ b/Engine/Plugins/Experimental/Animation/PoseSearch/PoseSearch.uplugin
@@ -26,5 +26,14 @@
 			"Type": "UncookedOnly",
 			"LoadingPhase": "PreDefault"
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "GameplayInsights",
+			"Enabled": true,
+			"WhitelistTargets": [
+				"Editor"
+			]
+		}
 	]
 }
