EditorDomain: Change whitelist/blacklist to new terms allowlist/blocklist. #rb Zousar.Shaker #rnx
[CL 17233751 by Matt Peters in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -373,25 +373,25 @@ bUseFullGCAssetClassNames=true
 [EditorDomain]
 EditorDomainEnabled=false
 SaveUnversioned=false
-; +ClassBlacklist=/Long/PackageName.ClassName
-ClassBlacklist=/Script/ControlRig.ControlRigBlueprintGeneratedClass
-; +PackageBlacklist=/Long/PackageName OR ../../../Standard/Filename/NoExtension OR D:\Absolute\Filename\NoExtension
+; +ClassBlockList=/Long/PackageName.ClassName
+ClassBlockList=/Script/ControlRig.ControlRigBlueprintGeneratedClass
+; +PackageBlockList=/Long/PackageName OR ../../../Standard/Filename/NoExtension OR D:\Absolute\Filename\NoExtension
 
-; Know bad files that are problematic if all of them come from EditorDomain. Blacklisting any one of these is sufficient to prevent the bug
-+PackageBlacklist=/Niagara/Functions/RandomRangeFloat
-+PackageBlacklist=/Niagara/Modules/Update/Color/ScaleColor
+; Know bad files that are problematic if all of them come from EditorDomain. Blocking any one of these is sufficient to prevent the bug
++PackageBlockList=/Niagara/Functions/RandomRangeFloat
++PackageBlockList=/Niagara/Modules/Update/Color/ScaleColor
 
 [TargetDomain]
 TargetDomainEnabled=false
-; IterativeClassWhitelist/IterativeClassBlacklist:
+; IterativeClassAllowList/IterativeClassBlockList:
 ;    Used in HybridIterative only.
-;    List of classes that may use iterative cooks. Whitelist superclasses are also whitelisted.
-;    Blacklist subclasses are also blacklisted. Blacklist overrides the whitelist.
-; +IterativeClassWhitelist=/Long/PackageName.ClassName
-; +IterativeClassBlacklist=/Long/PackageName.ClassName
-IterativeClassWhitelist=/Script/Engine.Texture2D
-+IterativeClassWhitelist=/Script/CoreUObject.MetaData
-+IterativeClassWhitelist=/Script/Engine.AssetImportData
+;    List of classes that may use iterative cooks. Allowed superclasses are also allowed.
+;    Blocked subclasses are also blocked. BlockList overrides the AllowList.
+; +IterativeClassAllowList=/Long/PackageName.ClassName
+; +IterativeClassBlockList=/Long/PackageName.ClassName
+IterativeClassAllowList=/Script/Engine.Texture2D
++IterativeClassAllowList=/Script/CoreUObject.MetaData
++IterativeClassAllowList=/Script/Engine.AssetImportData
 
 [CookPlatformDataCacheSettings]
 MaterialInstance=100
