Modeling Mode: Interactive Tool Preset Feature Version 2
Adds a preset manager with controls to edit preset labels and tooltips, display both project level and user level presets, and create/delete user level preset collections.
Presets are now saving internal tool setting state via json encoded strings, to avoid issues with transient class flags.
Presets are now either created by the user under project trees or via the preset manager in the plugin tree to act as user level preset collections.
A default preset collection is automatically created upon editor start up if none exists prior.
The default preset is used as the destination for all new presets until explicitly overridden by the user within an editor session.
Preset updating is removed for the time being.

#rb semion.piskarev
#preflight 6435e3b52909bc56c8f4c37a

[CL 25000852 by nathan mitchell in ue5-main branch]

--- a/Engine/Plugins/Experimental/ToolPresets/ToolPresets.uplugin
+++ b/Engine/Plugins/Experimental/ToolPresets/ToolPresets.uplugin
@@ -11,7 +11,7 @@
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"EnabledByDefault": true,
-	"CanContainContent": false,
+	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"Installed": false,
 	"IsExperimentalVersion": true,
@@ -20,6 +20,12 @@
 			"Name": "PresetAsset",
 			"Type": "Editor",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "PresetEditor",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
 		}
+
 	]
 }
