[AnimToTexture] - Smooth deformation - Fixed some issues custom StartFrame and EndFrame
#jira UE-182272, UE-182846
#preflight 6436e4cff12d5de7057bf81d

[CL 25010231 by David Corral in ue5-main branch]

--- a/Engine/Plugins/Experimental/AnimToTexture/AnimToTexture.uplugin
+++ b/Engine/Plugins/Experimental/AnimToTexture/AnimToTexture.uplugin
@@ -1,10 +1,10 @@
 {
 	"FileVersion": 3,
 	"Version": 2,
-	"VersionName": "2.0",
+	"VersionName": "2.1",
 	"FriendlyName": "AnimToTexture",
 	"Description": "Converts SkeletalMesh Animations into Textures",
-	"Category": "Other",
+	"Category": "Animation",
 	"CreatedBy": "Epic Games, Inc.",
 	"CreatedByURL": "https://epicgames.com",
 	"DocsURL": "",
