Lyra: Add a Lyra Player Mappable key settings, Lyra Input user settings, and Lyra player mappable key profile base classes. There are no customizations in them for now, but this way it is easier for a game based on Lyra to customize their input settings.
For now, these are being submitted but not enabled until the content gets cleaned up to use the new player mappable key settings.

#jira UE-180031
#rb trivial
#rnx
#preflight 6436d69a00398d6f885bd888

[CL 25011372 by ben hoffman in ue5-main branch]

--- a/Samples/Games/Lyra/Config/DefaultInput.ini
+++ b/Samples/Games/Lyra/Config/DefaultInput.ini
@@ -44,3 +44,8 @@ AnalogCursorSettings=(PreprocessorPriority=2,bEnableCursorAcceleration=True,Curs
 bUseEnhancedInput=True
 MappableInputConfig=None
 
+[/Script/EnhancedInput.EnhancedInputDeveloperSettings]
+bEnableUserSettings=False
+UserSettingsClass=/Script/LyraGame.LyraInputUserSettings
+DefaultPlayerMappableKeyProfileClass=/Script/LyraGame.LyraPlayerMappableKeyProfile
+
